# replay-benchmark

./: .gitignore  README.md  full_results.json  main.py  pyproject.toml  s2s_eval_gradio.py
diarization/: diarize.py  latency.py  overlap.py  plan.md  repetition.py  upload.py  verified_overlaps.json  verified_repetitions.json  verified_results.json  verify_latency.py  verify_overlap.py  verify_repetition.py
diarization/output/: 1a8ead80-5b1c-4f93-9c03-abb1ba5ad2b6.json
final_submission/: .env.example  clean_results.json  diarize.py  latency.py  main.py  overlap.py  repetition.py  results.json  upload.py  verify_latency.py  verify_overlap.py  verify_repetition.py  voxtral.py
model_usage/: README.md
model_usage/audio_understanding/: audio_flamingo.py  qwen_audio_understanding.py  voxtral.py  voxtral_gradio.py
model_usage/emotion/: speech_brain.py  whisper_based.py
simulator/: .gitignore  README.md  agent_to_agent_webrtc.py  analyze_conversations.py  env.example  main.py  pyproject.toml  run_conversation.py
simulator/simulator-agent/basic-agent/: bot.py  pcc-deploy.toml  pyproject.toml
simulator/tested-agents/basic-agent/: bot.py  pcc-deploy.toml
